<resources>
    <string name="app_name">המלאכים</string>
    <string name="title_activity_test">testActivity</string>
    <string name="greeting">בוקר טוב, שם!</string>
    <string name="subtitle">משפט השראה מתחת לשם</string>
    <string name="dark_mode_on">מצב כהה פעיל</string>
    <string name="dark_mode_off">מצב כהה כבוי</string>
    <string name="text_size_very_small">קטן מאוד</string>
    <string name="text_size_normal">רגיל</string>
    <string name="text_size_large">גדול</string>
    <string name="text_size_huge">ענק</string>
    <string name="text_size_label">גודל טקסט: %1$s</string>
    <string name="status_looking_for_volunteer">מחפשים אחר מתנדב זמין בסביבתך</string>
    <string name="status_volunteer_on_the_way">המתנדב נמצא בדרך אליך</string>
    <string name="status_volunteer_arrived">המתנדב הגיע לאירוע</string>
    <string name="status_event_finished">האירוע הסתיים</string>
    <string name="step_looking">חיפוש מתנדב</string>
    <string name="step_on_the_way">מתנדב בדרך</string>
    <string name="step_arrived">מתנדב באירוע</string>
    <string name="step_finished">האירוע הסתיים</string>
    <string name="police_option">100 - משטרה</string>
    <string name="mda_option">101 - מגן דוד אדום</string>
    <string name="fire_option">102 - מכבי אש</string>
    <string name="select_emergency_service">בחר שירות חירום להתקשרות</string>
    <string name="error_title">שגיאה</string>
    <string name="select_rating_warning">נא לבחור דירוג לפני השליחה.</string>
    <string name="thank_you_title">תודה על הדירוג!</string>
    <string name="feedback_summary">הדירוג שלך: %1$.1f\nהמשוב שלך:\n%2$s</string>
    <string name="ok_button">אישור</string>
    <string name="step_vol_claim">שיוך אירוע</string>
    <string name="step_vol_status">עדכון הגעה</string>
    <string name="step_vol_close">סגירת אירוע</string>
    <string name="location_permission_message">יש לאפשר גישה למיקומכם</string>
    <string name="enable_permission_button">לחץ כאן לאפשר הרשאות</string>
    <string name="location_permission_settings_message">ניתן לאפשר את המיקום בהגדרות המכשיר.</string>
    <string name="open_settings_button">פתח הגדרות</string>
    <string name="enable_location_services">הפעלת שירותי מיקום</string>
    <string name="request_location_permission">לחץ כאן לאישור</string>
    <string name="id_field_locked">שדה זה לא ניתן לעריכה</string>
    <string name="fill_all_fields">נא למלא את כל השדות</string>
    <string name="invalid_email">כתובת האימייל אינה תקינה</string>
    <string name="invalid_name">השם שהוזן אינו תקין</string>
    <string name="invalid_id">מספר תעודת הזהות חייב להכיל 9 ספרות</string>
    <string name="passwords_do_not_match">הסיסמאות לא תואמות</string>
    <string name="select_birth_date_error">יש לבחור תאריך לידה</string>
    <string name="details_saved">הפרטים נשמרו בהצלחה</string>
    <string name="error_saving_details">שגיאה בשמירת הפרטים</string>
    <string name="save_changes">שמור שינויים</string>
    <string name="step_title_event_type">סוג האירוע</string>
    <string name="step_desc_event_type">בחר את סוג האירוע שברצונך לדווח עליו.</string>
    <string name="step_title_what_happened">מה קרה</string>
    <string name="step_desc_what_happened">ספר בקצרה מה התרחש.</string>
    <string name="step_title_questionnaire">פרטים ראשוניים על האירוע</string>
    <string name="step_desc_questionnaire">ענה על מספר שאלות קצרות שיעזרו לנו להבין את המצב.</string>
    <string name="step_title_location">מיקום</string>
    <string name="step_desc_location">אשר את מיקום האירוע על גבי המפה.</string>
    <string name="step_title_summary">סיכום</string>
    <string name="step_desc_summary">בדוק שפרטי הדיווח נכונים לפני השליחה.</string>
    <string name="call_for_help">קריאה לעזרה</string>
    <string name="next_step">המשך</string>
    <string name="previous_step">חזור</string>
    <string name="location_permission_enabled">שיתוף מיקומך בזמן אמת פעיל</string>
    <string name="location_permission_disabled">שיתוף מיקום בזמן אמת לא פעיל</string>
    <string name="location_permission_description">שיתוף מיקומך מאפשר לנו לעזור בעת הצורך</string>
    <string name="notifications_enabled">התראות האפליקציה מופעלות</string>
    <string name="notifications_disabled">התראות האפליקציה חסומות</string>
    <string name="notifications_description">אם תאפשר הרשאות התראות, תוכל לקבל עדכונים חשובים בזמן אמת</string>
    <string name="manage_permission">נהל הרשאות</string>
    <string name="allow_permission">אפשר הרשאה</string>
    <string name="share_app_text">הורידו את האפליקציה שלנו: https://play.google.com/store/apps/dev?id=7946031944863744406&amp;hl=en-US</string>
    <string name="share_via">שתף באמצעות</string>
    <string name="logout_title">התנתקות</string>
    <string name="logout_message">האם אתה בטוח שברצונך להתנתק?</string>
    <string name="logout_yes">כן</string>
    <string name="logout_no">לא</string>
    <string name="cancel_event_creation_message">האם אתה בטוח שברצונך לבטל יצירת האירוע?</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="select_image">בחירת תמונת פרופיל</string>
    <string name="support_email">theangelsyvc@gmail.com</string>
    <string name="support_website_url">https://github.com/theAngelsAPP</string>
    <string name="support_whatsapp_url">https://wa.me/972529568878</string>
    <string name="project_book">ספר הפרויקט</string>
    <string name="project_book_url">https://theangels.vizn.co.il/index.php/%D7%A2%D7%9E%D7%95%D7%93_%D7%A8%D7%90%D7%A9%D7%99</string>
    <string name="podcast_title">האזנה לפודקאסט</string>
    <string name="podcast_url">https://creators.spotify.com/pod/profile/theangelsapp</string>
    <string name="your_location">המיקום שלך</string>
    <string name="safety_warning">יש להעביר את הבן אדם למקום בטוח!</string>
    <string name="q_safety">האם קיים סיכון מיידי לאדם או לסביבה?</string>
    <string name="q_pulse">האם יש פגיעה בגוף או ברכוש?</string>
    <string name="q_breathing">האם יש צורך בעזרה מיידית של גורם מקצועי?</string>
    <string name="q_bleeding">האם קיים סיכון להחמרה במצב?</string>
    <string name="q_safety_yes">האם קיים סיכון מיידי לאדם או לסביבה? - כן</string>
    <string name="q_pulse_yes">האם יש פגיעה בגוף או ברכוש? - כן</string>
    <string name="q_breathing_no">האם יש צורך בעזרה מיידית של גורם מקצועי? - לא</string>
    <string name="q_bleeding_no">האם קיים סיכון להחמרה במצב? - לא</string>
    <string name="event_location_title">מיקום האירוע</string>
    <string name="event_type_label">סוג אירוע: %1$s</string>
    <string name="what_happened_label">מה קרה: %1$s</string>
    <string name="location_label">מיקום: %1$.5f, %2$.5f</string>
    <string name="location_label_address">מיקום: %1$s</string>
    <string name="close_event_dialog_title">בחר את סיבת סגירת האירוע</string>
    <string name="close_event_confirm">סיום</string>
    <string name="close_event_cancel">ביטול</string>
    <string name="close_event_other_hint">הכנס סיבה</string>
    <string name="event_claimed">האירוע שויך אליך</string>
    <string name="enter_address">הזן כתובת</string>
    <string name="address_not_found">הכתובת לא נמצאה</string>
    <string name="address_lookup_error">שגיאה בחיפוש כתובת</string>
    <string name="location_updated">המיקום עודכן</string>
    <string name="retrieving_address">טוען כתובת...</string>
    <string name="manual_location_button">בחירת מיקום ידנית</string>
    <string name="invalid_israel_address">אנא הזן כתובת חוקית בישראל</string>
    <string name="use_current_location">השתמש במיקום הנוכחי</string>
    <string name="manual_mode_label">מצב בחירה ידני פעיל</string>
    <string name="cancel">בטל</string>
    <string name="questionnaire_incomplete">שים לב שלא ענית על השאלון, האם אתה בטוח?</string>
    <string name="safety_popup_title">אזהרת בטיחות</string>
    <string name="continue_button">המשך</string>
    <string name="emergency_button">Emergency Button</string>
    <string name="back">Back</string>
    <string name="title_display_interface">תצוגה וממשק</string>
    <string name="dark_mode">מצב כהה</string>
    <string name="text_size">גודל טקסט</string>
    <string name="title_emergency_contact">איש קשר במצב חירום</string>
    <string name="no_emergency_contact">לא נוסף עדיין איש קשר לשעת חירום</string>
    <string name="full_name_label">שם מלא</string>
    <string name="phone_label">מספר טלפון</string>
    <string name="relationship_label">קשר</string>
    <string name="emergency_contact_checkbox">הוספת איש קשר לשעת חירום זה מאשרת לצוות המלאכים ליצור קשר בשעת חירום ולעדכן אותו על מצבך בעת הצורך.</string>
    <string name="add_contact_button">הוספת איש קשר</string>
    <string name="save_contact_button">שמירת איש קשר</string>
    <string name="edit_contact_button">עריכת איש קשר</string>
    <string name="remove_contact_button">הסרת איש קשר</string>
    <string name="confirm_remove_contact">האם להסיר את איש הקשר?</string>
    <string name="contact_saved">איש הקשר נשמר בהצלחה</string>
    <string name="contact_removed">איש הקשר הוסר</string>
    <string name="invalid_phone">מספר הטלפון אינו תקין</string>
    <string name="error_loading_contact">שגיאה בטעינת איש הקשר</string>
    <string name="search_hint">חיפוש הדרכה...</string>
    <string name="filter_medical">רפואי</string>
    <string name="filter_security">ביטחוני</string>
    <string name="filter_vehicle">רכב</string>
    <string name="filter_animal">בעח</string>
    <string name="training_defib">איך להשתמש בדפיברילטור?</string>
    <string name="training_epipen">איך להשתמש באפיפן?</string>
    <string name="training_tourniquet">איך לשים חוסם עורקים?</string>
    <string name="training_choking">מה עושים במקרה של חנק?</string>
    <string name="training_cpr">איך נבצע החייאה?</string>
    <string name="defib_title">איך נשתמש בדפיברילטור?</string>
    <string name="defib_intro">המדריך יסביר כיצד להשתמש בדפיברילטור בצורה נכונה בעת מקרה חירום. ביצוע החייאה מהיר עשוי להציל חיים.</string>
    <string name="step1_title">שלב 1: בדיקת המטופל</string>
    <string name="step1_text">יש לוודא כי המטופל אינו מגיב ואין לו דופק. במידה והמצב מצריך זאת, יש להפעיל את הדפיברילטור ולפעול לפי ההוראות הקוליות.</string>
    <string name="step2_title">שלב 2: הצמדת המדבקות</string>
    <string name="step2_text">מדביקים את האלקטרודות על חזה המטופל כפי שמופיע בהוראות, ומוודאים שאף אחד לא נוגע בגוף המטופל לפני מתן השוק החשמלי.</string>
    <string name="step3_title">שלב 3:  ניתוח קצב הלב</string>
    <string name="step3_text">לאחר חיבור האלקטרודות, הדפיברילטור ינתח את קצב הלב של המטופל באופן אוטומטי. יש לוודא שאף אחד אינו נוגע במטופל בזמן שהמכשיר מבצע את הניתוח.</string>
    <string name="step4_title">שלב 4: מתן שוק חשמלי (אם נדרש)</string>
    <string name="step4_text">אם הדפיברילטור מזהה שהשוק נחוץ, הוא ינחה ללחוץ על כפתור מתן השוק. יש להתרחק מהמטופל, לוודא שאף אחד לא נוגע בו, וללחוץ על הכפתור. לאחר מכן, יש להמשיך בהחייאה בהתאם להנחיות.</string>
    <string name="event_details">פרטי האירוע</string>
    <string name="event_picture">תמונת אירוע</string>
    <string name="volunteer_photo">תמונת מתנדב</string>
    <string name="address_text">שדרות אליעזר 27, חיפה</string>
    <string name="event_type">אירוע רפואי - אדם ללא הכרה</string>
    <string name="findings_title">ממצאים מקדימים</string>
    <string name="finding_safe">✔ הבן אדם נמצא במקום בטוח.</string>
    <string name="finding_pulse">✔ יש דופק.</string>
    <string name="live_event_title">אירוע פעיל: מעקב בזמן אמת</string>
    <string name="time_title">זמן</string>
    <string name="event_address_title">כתובת האירוע</string>
    <string name="event_address">האחים טרבס 27 רחובות</string>
    <string name="credits_title">קרדיטים</string>
    <string name="credits_main_title">אפליקציית המלאכים</string>
    <string name="credits_subtitle">פרויקט גמר מערכות מידע עמק יזרעאל</string>
    <string name="credits_developed_by">פותח על ידי הסטודנטים:</string>
    <string name="credits_student1">בתאל גופלייזר</string>
    <string name="credits_student2">עומר גמליאל</string>
</resources>